crates/plotnik-tests/tests/macro_diagnostics/fail/missing_query.rs
plotnik::query! {
    grammar = "arborium-javascript",
}

fn main() {}
